# helpspot

./: .env.example  .gitattributes  .gitignore  CLI.md  LICENSE  README.md  pyproject.toml  spark.sh
.opencode/skills/: README.md
.opencode/skills/helpspot-categories/: SKILL.md
.opencode/skills/helpspot-search/: SKILL.md
.opencode/skills/helpspot-ticket/: SKILL.md
.opencode/skills/spark-categories/: SKILL.md
.opencode/skills/spark-search/: SKILL.md
.opencode/skills/spark-ticket/: SKILL.md
examples/: basic_usage.py  create_ticket.py  list_categories.py  setup_cli.py  simple_create_ticket.py
src/helpspot/: __init__.py  auth.py  cli.py  client.py  exceptions.py  utils.py
src/helpspot/api/: __init__.py  base.py  categories.py  custom_fields.py  customers.py  filters.py  requests.py  status_types.py
src/helpspot/models/: __init__.py  category.py  common.py  custom_field.py  customer.py  filter.py  request.py  status_type.py  version.py
tests/: __init__.py  conftest.py  test_api_modules.py  test_auth.py  test_client.py  test_models.py  test_requests_api.py
tests/fixtures/: api_error.json  categories_list.json  custom_fields_list.json  customer_requests.json  filter_get.json  filters_list.json  request_create.json  request_get.json  request_search.json  status_types_list.json  version.json
