[project]
name = "helpspot"
version = "0.1.0"
description = "Python client library for HelpSpot API"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "HelpSpot Community", email = "support@helpspot.com"}
]
keywords = ["helpspot", "api", "client", "helpdesk", "support"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.3.1",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "rich>=14.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[project.scripts]
helpspot = "helpspot.cli:cli"

[project.urls]
Homepage = "https://github.com/helpspot/helpspot-python"
Documentation = "https://github.com/helpspot/helpspot-python#readme"
Repository = "https://github.com/helpspot/helpspot-python"
Issues = "https://github.com/helpspot/helpspot-python/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=helpspot --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
